# Argus

./: .dockerignore  .env.example  .gitignore  .semgrepignore  .trivyignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  go.work  go.work.sum  mkdocs.yml
ai-copilot/: Dockerfile  README.md  requirements.txt
api-gateway/: Dockerfile  README.md  go.mod  go.sum
cli/: README.md  go.mod  main.go
dashboard/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
docs/: CASE_STUDY.md  DEMO_SCRIPT.md  KNOWN_GAPS.md  README.md  architecture.md  changelog.md  getting-started.md  index.md  operations-runbook.md  requirements.txt
drift-monitor/: Dockerfile  README.md  analyzer.py  config.py  evidently_report.py  incidents.py  main.py  metrics_server.py  requirements.txt
examples/: README.md
incident-engine/: Dockerfile  README.md  go.mod  go.sum
infra/: README.md
ingestion/: README.md  __init__.py  pytest.ini  requirements.txt
lakehouse/: Dockerfile  README.md  requirements.txt
observability/: README.md
orchestration/: Dockerfile  README.md  dagster.yaml  (+3 more)
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/src/argus_sdk/: __init__.py  client.py  errors.py  ingest.py  models.py
sdk/python/tests/: test_avro_bundle.py  test_client.py  test_ingest.py
shared/contracts/: CONTRACT_CHANGELOG.md  pyproject.toml
shared/contracts/tests/: test_schema_consistency.py
shared/contracts/v1/: __init__.py  models.py  pandera_schemas.py
(+1109 files in other folders)
