[project]
name = "argus-sdk"
version = "0.1.0"
description = "ARGUS platform SDK — gateway REST client, live telemetry stream, and Kafka ingest"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ARGUS" }]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
ingest = [
    "kafka-python>=2.0.2",
    "fastavro>=1.9.0",
]
dev = [
    "pytest>=8.3.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "argus-sdk[ingest]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
